# leptos_frontend

./: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml
.cargo/: config.toml
frontend/: Cargo.toml  README.md  Trunk.toml  index.html
frontend/docs/: how_to_highlight_menu_dynamically.md  review_rust.md
frontend/src/: bulma_playground.rs  main.rs
frontend/src/leptos_demo_components/: demo_async.rs  demo_basics.rs  demo_control_flow.rs  demo_error_handling.rs  demo_form_and_input.rs  demo_iteration.rs  demo_nested_route.rs  demo_parent_children_communication.rs  demo_reactivity.rs  mod.rs
